--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,7 +4,7 @@
 %table#movies
   %thead
     %tr
-      %th link_to 'Movie Title', movies_path(:sort => 'title)
+      %th= link_to 'Movie Title', movies_path(:sort => 'title)
       %th Rating
       %th <a id="release_date_header" href="movies/release_date">Release Date</a>
       %th More Info
