--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -5,7 +5,7 @@
 	Include:
 	- @all_ratings.each do |rating|
 		= rating
-		= check_box_tag "ratings[#{rating}]", @selected_ratings.include?(rating)
+		= check_box_tag "ratings[#{rating}]", if params[:ratings]; params[:ratings].include?(rating) end
 	= submit_tag 'Refresh'
 
 %table#movies
