--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,11 +1,12 @@
 -#  This file is app/views/movies/index.html.haml
 %h1 All Movies
 
-= form_tag movies_path :sort=>@sortby, :method => :get do
+= form_tag movies_path(:sort=>@sortby), :method => :get do
 	Include:
 	- @all_ratings.each do |rating|
 		= rating
 		= check_box_tag "ratings[]", rating, @selected_ratings.include?(rating)
+	= hidden_field_Tag :sort, params[:sort]
 	= submit_tag 'Refresh'
 
 %table#movies
