--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,20 +1,19 @@
 -#  This file is app/views/movies/index.html.haml
 %h1 All Movies
 
-= form_tag movies_path(:sort=>@sortby), :method => :get do
+= form_tag movies_path, :method => :get do
 	Include:
 	- @all_ratings.each do |rating|
 		= rating
 		= check_box_tag "ratings[]", rating, @selected_ratings.include?(rating)
-	= hidden_field_Tag :sort, params[:sort]
 	= submit_tag 'Refresh'
 
 %table#movies
 	%thead
 		%tr
-		%th= link_to 'Movie Title', movies_path(:sort=>'title'), :id=>'title_header'
+		%th= link_to 'Movie Title', movies_path(:sort=>'title', :ratings => params[:ratings']), :id=>'title_header'
 		%th Rating
-		%th= link_to 'Release Date', movies_path(:sort=>'release_date'), :id=>'release_date_header'
+		%th= link_to 'Release Date', movies_path(:sort=>'release_date', :ratings => params[:ratings']), :id=>'release_date_header'
 		%th More Info
 	%tbody
 		- @movies.each do |movie|
