--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -5,15 +5,21 @@
 	Include:
 	- @all_ratings.each do |rating|
 		= rating
-		= check_box_tag "ratings[]", rating, @selected_ratings.include?(rating)
-	= submit_tag 'Refresh', :id => "ratings submit"
+		= check_box_tag "ratings[]", rating, @selected_ratings.include?(rating), :id => "rating_#{rating}"
+	= submit_tag 'Refresh', :id => "ratings_submit"
 
 %table#movies
 	%thead
 		%tr
-		%th= link_to 'Movie Title', movies_path(:sort=>'title', :ratings => params[:ratings]), :id=>'title_header'
+		- if params[:sort] == 'title'
+			%th.hilite= link_to 'Movie Title', movies_path(:sort=>'title', :ratings => params[:ratings]), :id=>'title_header'
+		- else
+			%th= link_to 'Movie Title', movies_path(:sort=>'title', :ratings => params[:ratings]), :id=>'title_header'
 		%th Rating
-		%th= link_to 'Release Date', movies_path(:sort=>'release_date', :ratings => params[:ratings]), :id=>'release_date_header'
+		- if params[:sort] == 'release_date'
+			%th.hilite= link_to 'Release Date', movies_path(:sort=>'release_date', :ratings => params[:ratings]), :id=>'release_date_header'
+		- else
+			%th= link_to 'Release Date', movies_path(:sort=>'release_date', :ratings => params[:ratings]), :id=>'release_date_header'
 		%th More Info
 	%tbody
 		- @movies.each do |movie|
